further maps updates

--- a/src/components/Main/Main.scss
+++ b/src/components/Main/Main.scss
@@ -2,11 +2,11 @@
 
 .main {
   display: flex;
-  padding-left: $nav-width + 2;
+  // padding-left: $nav-width + 2;
 
   &__inner {
     width: 100%;
     height: 100vh;
-    padding: 4rem;
+    // padding: 4rem;
   }
 }
