--- a/src/components/Spinner/Spinner.scss
+++ b/src/components/Spinner/Spinner.scss
@@ -1,18 +1,24 @@
 .spinner {
   display: block;
-  width: 80px;
-  height: 80px;
-  border: 3px solid transparent;
+  width: 200px;
+  height: 200px;
+  border: 5px solid transparent;
   border-radius: 50%;
-  border-bottom-color: #333;
-  border-top-color: #333;
+  border-bottom-color: #fff;
+  border-top-color: #fff;
   animation: spin 1s linear infinite;
 
   &__container {
+    align-items: center;
     position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    width: 100%;
+    display: flex;
+    height: 100%;
+    justify-content: center;
+    /* top: 50%; */
+    /* left: 50%; */
+    /* transform: translate(-100%,-100%); */
+    background-color: rgba(0, 0, 0, 0.5);
   }
 }
 
