--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,7 +1,3 @@
-body {
-  font-family: sans-serif;
-}
-
 .border {
   &--top {
     border-top: 1px solid #e6e6e6;
@@ -11,5 +7,11 @@ body {
 .opacity {
   &--none {
     opacity: 0;
+  }
+}
+
+.height {
+  &--100 {
+    height: 100vh;
   }
 }
