--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "Asap";
-  src: local("Asap"), url(./Asap-Regular.ttf) format("truetype");
+  src: local("Asap"), url(../src/assets/Asap-Regular.ttf) format("truetype");
 }
 
 // Our styles
