--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,3 +1,10 @@
+body {
+  font-family: "Asap";
+  font-size: 16px;
+  box-sizing: border-box;
+  color: #212121;
+}
+
 .border {
   &--top {
     border-top: 1px solid #e6e6e6;
