--- a/src/components/Search/Search.scss
+++ b/src/components/Search/Search.scss
@@ -3,6 +3,8 @@
   align-items: center;
   justify-content: center;
   height: 100vh;
+  text-align: center;
+  font-size: 20px;
 
   &__title {
     text-align: center;
