--- a/src/components/Input/Input.scss
+++ b/src/components/Input/Input.scss
@@ -1,10 +1,21 @@
 .input {
-  min-width: 150px;
-  margin: 0 0.5rem;
+  width: 150px;
   border: none;
-  border-radius: 5%;
+  border-radius: 5px;
   padding: 0.5rem;
   font-size: inherit;
   background-color: #fff;
   box-shadow: 2px 2px 4px 1px rgba(150, 150, 150, 0.1);
+  transition: background-color 0.2s linear;
+
+  &:hover {
+    color: #fff;
+    background-color: #4da0ff;
+    cursor: pointer;
+    transition: background-color 0.2s linear;
+
+    &::placeholder {
+      color: #fff;
+    }
+  }
 }
