--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -3,6 +3,7 @@ body {
   font-size: 16px;
   box-sizing: border-box;
   color: #212121;
+  background-color: #f1f3f5;
 }
 
 .border {
@@ -21,4 +22,9 @@ body {
   &--100 {
     height: 100vh;
   }
+}
+
+.centre {
+  width: 50%;
+  margin: 0 auto;
 }
