--- a/src/components/Search/Search.scss
+++ b/src/components/Search/Search.scss
@@ -2,7 +2,10 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-direction: column;
+  width: 50%;
   height: 100vh;
+  margin: 0 auto;
   text-align: center;
   font-size: 20px;
 
