--- a/src/components/Select/Select.scss
+++ b/src/components/Select/Select.scss
@@ -21,6 +21,13 @@
     position: relative;
 
     &:hover {
+      .select {
+        color: #fff;
+        background-color: #4da0ff;
+        cursor: pointer;
+        transition: background-color 0.2s linear;
+      }
+
       &::after {
         background-image: url("../../assets/arrow-down-white.svg");
         transition: background-image 0.2s linear;
