--- a/src/components/Spinner/Spinner.scss
+++ b/src/components/Spinner/Spinner.scss
@@ -4,8 +4,8 @@
   height: 200px;
   border: 5px solid transparent;
   border-radius: 50%;
-  border-bottom-color: #fff;
-  border-top-color: #fff;
+  border-bottom-color: #4da0ff;
+  border-top-color: #4da0ff;
   animation: spin 1s linear infinite;
 
   &__container {
