--- a/src/styles/Animations.scss
+++ b/src/styles/Animations.scss
@@ -12,3 +12,31 @@
     opacity: 1;
   }
 }
+
+.slide {
+  &--left {
+    animation: slideLeft 0.2s 0s ease-in-out;
+  }
+
+  &--right {
+    animation: slideRight 0.2s 0s ease-in-out;
+  }
+}
+
+@keyframes slideLeft {
+  0% {
+    left: -10%;
+  }
+  100% {
+    left: 0;
+  }
+}
+
+@keyframes slideRight {
+  0% {
+    right: -10%;
+  }
+  100% {
+    right: 0;
+  }
+}
