further updates to map styling and minor changes

--- a/src/index.scss
+++ b/src/index.scss
@@ -8,4 +8,5 @@
 @import "./styles/App.scss";
 @import "./styles/Animations.scss";
 @import "./styles/Flex.scss";
+@import "./styles/Mixins.scss";
 @import "./styles/Spacing.scss";
