--- a/src/components/Menu/Menu.scss
+++ b/src/components/Menu/Menu.scss
@@ -1,48 +1,34 @@
+@import "../../styles/Mixins.scss";
+
 .menu {
-  position: absolute;
+  position: relative;
   top: 10px;
-  left: 10px;
-  width: 95%;
+  width: 85%;
+  margin: 0 auto;
   border-radius: 5px;
+  padding: 1rem;
   background-color: #fff;
   box-shadow: 2px 2px 4px 1px rgba(0, 0, 0, 0.1);
 
-  @media only screen and (min-width: 1024px) {
-    max-width: 230px;
-    padding: 1rem;
-  }
-
-  &__title {
-    @media only screen and (min-width: 1024px) {
-      margin-bottom: 1rem;
-      border-bottom: 2px solid #f2f2f2;
-    }
-  }
-
-  &__inner {
-    padding: 1rem;
-
-    @media only screen and (min-width: 1024px) {
-      padding: 0;
-    }
+  @include lg {
+    left: 10px;
+    width: 300px;
+    margin: 0;
   }
 
   &__nav {
     height: 0px;
-    margin-top: 0;
     overflow: hidden;
     transition: all 0.2s linear;
 
     &--open {
-      height: 250px;
-      margin-top: 1rem;
-      overflow: scroll;
+      height: 85vh;
+      overflow-y: auto;
       transition: all 0.2s linear;
     }
 
-    @media only screen and (min-width: 1024px) {
+    @include lg {
       display: block;
-      height: auto;
     }
   }
 
@@ -58,10 +44,14 @@
   }
 
   &__icon {
-    display: block;
+    &:first-child {
+      margin-right: 0.5rem;
+    }
 
-    @media only screen and (min-width: 1024px) {
-      display: none;
+    &:last-child {
+      @include lg {
+        display: none;
+      }
     }
   }
 }
