made various changes to types across the app, added to read me and tidied some styles up

--- a/src/components/Menu/Menu.scss
+++ b/src/components/Menu/Menu.scss
@@ -48,10 +48,10 @@
       margin-right: 0.5rem;
     }
 
-    &:last-child {
-      @include lg {
-        display: none;
-      }
-    }
+    // &:last-child {
+    //   @include lg {
+    //     display: none;
+    //   }
+    // }
   }
 }
