--- a/src/components/Search/Search.scss
+++ b/src/components/Search/Search.scss
@@ -1,13 +1,20 @@
+@import "../../styles/Mixins.scss";
+
 .search {
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  width: 50%;
   height: 100vh;
-  margin: 0 auto;
   text-align: center;
   font-size: 20px;
+
+  &__inner {
+    @include lg {
+      display: flex;
+      align-items: center;
+    }
+  }
 
   &__title {
     text-align: center;
