added extra validation to postcode, added credits and minor refactoring

--- a/src/styles/Animations.scss
+++ b/src/styles/Animations.scss
@@ -17,11 +17,48 @@
   &--left {
     animation: slideLeft 0.2s 0s ease-in-out;
   }
+
+  &--right {
+    animation: slideRight 0.2s 0s ease-in-out;
+  }
 }
 
 @keyframes slideLeft {
   0% {
     left: -10%;
+  }
+  100% {
+    left: 0;
+  }
+}
+
+@keyframes slideRight {
+  0% {
+    right: -10%;
+  }
+  100% {
+    right: 0;
+  }
+}
+
+.error {
+  position: relative;
+  border: 2px solid red;
+  animation: error 0.4s 0s ease-in-out;
+}
+
+@keyframes error {
+  0% {
+    left: 0;
+  }
+  25% {
+    left: 10px;
+  }
+  50% {
+    left: 0px;
+  }
+  75% {
+    left: 10px;
   }
   100% {
     left: 0;
