--- a/src/index.scss
+++ b/src/index.scss
@@ -7,6 +7,7 @@
 @import "./styles/Reset.scss";
 @import "./styles/App.scss";
 @import "./styles/Animations.scss";
+@import "./styles/Border.scss";
 @import "./styles/Flex.scss";
 @import "./styles/Mixins.scss";
 @import "./styles/Spacing.scss";
