have tidied up info windows slightly, made half postcode search valid

--- a/src/index.scss
+++ b/src/index.scss
@@ -10,5 +10,6 @@
 @import "./styles/Border.scss";
 @import "./styles/Flex.scss";
 @import "./styles/Mixins.scss";
-@import "./styles/Spacing.scss";
 @import "./styles/Shadow.scss";
+@import "./styles/Sizing.scss";
+@import "./styles/Spacing.scss";
